test/bad/class0.pacc
/*
nopacc 5:20 'expected CChar'
*/

Bad :: char * ← [z-a] → { "foo" }
